--- a/starship.toml
+++ b/starship.toml
@@ -92,15 +92,15 @@ truncation_symbol	= "…/"
 home_symbol		= "🏠"
 
 [directory.substitutions]
-"Desktop"		= ""
-"Área de Trabalho"	= ""
+"Desktop"		= "🖼️"
+"Área de Trabalho"	= "🖼️"
 "Documents"		= "📝"
 "Documentos"		= "📝"
-"Downloads"		= "⬇️"
-"Music"			= "🎶 "
-"Música"		= "🎶 "
-"Pictures"		= "📷 "
-"Imagens"		= "📷 "
+"Downloads"		= "🔽"
+"Music"			= "🎶"
+"Música"		= "🎶"
+"Pictures"		= "📷"
+"Imagens"		= "📷"
 "Public"		= "🚌"
 "Público"		= "🚌"
 "Videos"		= "📹"
